--- a/assignment2/main.tex
+++ b/assignment2/main.tex
@@ -54,11 +54,11 @@
 \begin{enumerate}
 
 
-\item $\brak{-1,2,1}$, $\brak{1,-2,5}$, $\brak{4,-7,8}$ and $\brak{2,-3,4}$ are the vertices of a parallelogram. 
+\textbf { $\brak{-1,2,1}$, $\brak{1,-2,5}$, $\brak{4,-7,8}$ and $\brak{2,-3,4}$ are the vertices of a parallelogram. }
 
 \solution
 
-To show that the points $\brak{-1, 2, 1}$, $\brak{1, -2, 5}$, $\brak{4, -7, 8}$ and $\brak{2, -3, 4}$ form a parallelogram, we need to verify that the opposite sides are equal.\\
+properties  $\brak{-1, 2, 1}$, $\brak{1, -2, 5}$, $\brak{4, -7, 8}$ and $\brak{2, -3, 4}$ form a parallelogram, we need to verify that the opposite sides are equal.\\
 
 $A = \brak{-1, 2, 1}, \quad B = \brak{1, -2, 5}, \quad C = \brak{4, -7, 8}, \quad D = \brak{2, -3, 4}$ \\
 
