--- a/assignment2/main.tex
+++ b/assignment2/main.tex
@@ -54,7 +54,7 @@
 
 
 
-\textbf{ $\brak{-1,2,1}$, $\brak{1,-2,5}$, $\brak{4,-7,8}$ and $\brak{2,-3,4}$ are the vertices of a parallelogram.} 
+\textbf{Question :}$\brak{-1,2,1}$, $\brak{1,-2,5}$, $\brak{4,-7,8}$ and $\brak{2,-3,4}$ are the vertices of a parallelogram. 
 
 \solution
 
