--- a/Assignment2/tables/table.tex
+++ b/Assignment2/tables/table.tex
@@ -2,12 +2,12 @@
 \hline
 \textbf{Variable} & \textbf{Value} & \textbf{Description} \\
 \hline
-$A$ & \myvec{-1 \\ 2\\ 1\\ \\} & $A$ defined as point \\
+$A$ & \vec{-1 \\ 2\\ 1\\ \\} & $A$ defined as point \\
 \hline
-$B$ & \myvec{1 \\ -2\\ 5\\}  & $B$ defined as point  \\
+$B$ & \vec{1 \\ -2\\ 5\\}  & $B$ defined as point  \\
 \hline
-$C$ & \myvec{4 \\ -7\\ 8\\} & $C$ defined as point\\
+$C$ & \vec{4 \\ -7\\ 8\\} & $C$ defined as point\\
 \hline
-$D$ & \myvec{2 \\ -3\\ 4\\} & $D$ defined as point \\
+$D$ & \vec{2 \\ -3\\ 4\\} & $D$ defined as point \\
 \hline
 \end{tabular} 
